test/tests/compiler/18_structures/invalid_parse/extra_credit/goto_kw_struct_tag.plx
# Because 'goto' is a keyword, we can't use it as a struct tag
type struc jump (a: i32)
pub fn main(none) i32 {
    return 0
}
